Loading first JS file

--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-"Hello World" 
-<header> hi </header>
+<!DOCTYPE html>
+<title>Page Title</title>
+
+<h1>HEADING</h1>
+<p>Etiam consectetur gravida eros, eu ultrices magna feugiat eget. Phasellus consequat consectetur suscipit. Integer pharetra ligula et dolor efficitur rutrum. Proin a tempus turpis. Nullam mattis risus at feugiat euismod. Nulla suscipit lacus in purus accumsan, vitae commodo metus rhoncus. Nam non neque sed ex tempus commodo sed sed turpis.</p>
+<script src="temp.js"></script>
