--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>Page Title</title>
-
+<script src="temp.js"></script>
 <h1>HEADING</h1>
 <p>Etiam consectetur gravida eros, eu ultrices magna feugiat eget. Phasellus consequat consectetur suscipit. Integer pharetra ligula et dolor efficitur rutrum. Proin a tempus turpis. Nullam mattis risus at feugiat euismod. Nulla suscipit lacus in purus accumsan, vitae commodo metus rhoncus. Nam non neque sed ex tempus commodo sed sed turpis.</p>
-<script src="temp.js"></script>
+<canvas id="mycanvas" width="200" height="100" style="border:1px solid #000000;">
+</canvas>
