--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     rhoncus. Nam non neque sed ex tempus commodo sed sed turpis.</p>
     <canvas height="100" id="mycanvas" style="border:1px solid #000000;" width=
     "200"></canvas>
+    <img src="gatomon.jpg" alt="A gift for my Digimon-obsessed sister, Margaret">
 </body>
 </html>
