--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <h1>HEADING</h1>
-     <img src="gatomon.jpg" alt="A gift for my Digimon-obsessed sister, Margaret" style="width:300px;height:300px;">
+     <img src="gatomon.jpg" alt="A gift for my Digimon-obsessed sister, Margaret" style="width:3in;height:3in;">
     <p>Etiam consectetur gravida eros, eu ultrices magna feugiat eget.
     Phasellus consequat consectetur suscipit. Integer pharetra ligula et dolor efficitur rutrum. Proin a tempus turpis. Nullam mattis risus at feugiat euismod. Nulla suscipit lacus in purus accumsan, vitae commodo metus rhoncus. Nam non neque sed ex tempus commodo sed sed turpis.</p>
-    <canvas height="100" id="mycanvas" style="border:1px solid #000000;" width=
-    "200"></canvas>
+    <canvas height="100" id="mycanvas" style="border:1px solid #000000;" width= "200"></canvas>
    
 </body>
 </html>
