--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Titletitletitle</title>
     <script src="temp.js">
     </script>
+    <link rel="shortcut icon" type="image/x-icon" href="icon.ico" />
 </head>
 <body>
     <h1>HEADING</h1>
