--- a/pages/inspiring-things.html
+++ b/pages/inspiring-things.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jane Du - Inspiring things</title>
     <link rel="stylesheet" href="http://zhuangjindu.github.io/style.css">
   </head>
