--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
     <footer>
       <div>
-	<small>Copyright 2016 Jane Du. Powered by <a href="http://wanganzhou.com/nanosite">nanosite</a>.</small>
+	<small>Copyright 2016 Jane Du. Thanks to my friend Andrew Wang for this<a href="http://wanganzhou.com/nanosite">nanosite</a>-powered site!</small>
       </div>
     </footer>
   </body>
