--- a/archive.html
+++ b/archive.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Jane Du</title>
     <link rel="stylesheet" href="http://zhuangjindu.github.io/style.css">
   </head>
@@ -28,7 +29,7 @@
     </section>
     <footer>
       <div>
-	<small>Copyright 2016 Jane Du. Thanks to my friend Andrew Wang for this<a href="http://wanganzhou.com/nanosite">nanosite</a>-powered site!</small>
+	<small>Copyright 2016 Jane Du. Powered by <a href="http://wanganzhou.com/nanosite">nanosite</a></small>
       </div>
     </footer>
   </body>
