--- a/archive.html
+++ b/archive.html
@@ -3,13 +3,13 @@
   <head>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Jane Du</title>
-    <link rel="stylesheet" href="http://zhuangjindu.github.io/style.css">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <header>
-      <h1><a href="http://zhuangjindu.github.io/index.html">Jane Du</h1></a>
-      <small>Messing-arounds of a distracted university student</small>
-      <nav><ul><li><a href='http://zhuangjindu.github.io/'>Home</a></li><li><a href='http://zhuangjindu.github.io/pages\inspiring-things.html'>Inspiring things</a></li></ul></nav>
+      <h1><a href="/index.html">Jane Du</h1></a>
+      <small>Coding, artwork, and blogging.</small>
+      <nav><ul><li><a href='/'>Home</a></li><li><a href='/pages\artwork.html'>Artwork</a></li><li><a href='/pages\inspiring-things.html'>Inspiring things</a></li></ul></nav>
     </header>
     <section>
       <article>
@@ -17,13 +17,13 @@
   <ul>
     
     <li>
-      <a href="http://zhuangjindu.github.io/posts\summertime.html">Summertime</a> (25 Jul 2016)
+      <a href="/posts\summertime.html">Summertime</a> (25 Jul 2016)
     </li>
     
   </ul>
 </article>
 <section>
-  <a href="http://zhuangjindu.github.io/index.html">Return to home.</a>
+  <a href="/index.html">Return to home.</a>
 </section>
 
     </section>
