--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Jane Du</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://zhuangjindu.github.io/style.css">
   </head>
   <body>
     <header>
-      <h1><a href="/index.html">Jane Du</h1></a>
+      <h1><a href="https://zhuangjindu.github.io/index.html">Jane Du</h1></a>
       <small>Coding, artwork, and blogging.</small>
-      <nav><ul><li><a href='/'>Home</a></li><li><a href='/pages\artwork.html'>Artwork</a></li><li><a href='/pages\inspiring-things.html'>Inspiring things</a></li></ul></nav>
+      <nav><ul><li><a href='https://zhuangjindu.github.io/'>Home</a></li><li><a href='https://zhuangjindu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://zhuangjindu.github.io/pages/inspiring-things.html'>Inspiring things</a></li></ul></nav>
     </header>
     <section>
       <p>Hi there! Welcome to my site. I am also on <a href="https://github.com/zhuangjindu">Github</a>, <a href="https://twitter.com/janezdu">Twitter</a>, <a href="https://keybase.io/cyphra">Keybase</a>, and <a href="https://janezdu.deviantart.com">Deviantart</a>.
@@ -17,20 +17,20 @@
 
 
   <article>
-    <h2><a href="/posts\summertime.html">Summertime</a></h2>
+    <h2><a href="https://zhuangjindu.github.io/posts/summertime.html">Summertime</a></h2>
     <small>25 Jul 2016</small>
     <p>So it's the middle of the summer -- two-thirds of the way through, actually -- and I have just spent a <em>very productive</em> weekend reading about the pains and perils of graduate study. The crux of it is that I've come across some intriguing writings/blogs that a) I want to remember and share, and b) have inspired me to write down some of my own thoughts.</p>
   </article>
 
 
 <section>
-  <a href="/archive.html">View older posts.</a>
+  <a href="https://zhuangjindu.github.io/archive.html">View older posts.</a>
 </section>
 
     </section>
     <footer>
       <div>
-	<small>Copyright 2016 Jane Du. Powered by <a href="http://wanganzhou.com/nanosite">nanosite</a></small>
+	<small>Copyright 2016 Jane Du. Powered by <a href="http://wanganzhou.com/nanosite">nanosite</a>.</small>
       </div>
     </footer>
   </body>
