Add link to summertime

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
   <article>
     <h2><a href="https://zhuangjindu.github.io/posts/summertime.html">Summertime</a></h2>
-    <small>25 Jul 2016</small>
-    <p>So it's the middle of the summer -- two-thirds of the way through, actually -- and I have just spent a <em>very productive</em> weekend reading about the pains and perils of graduate study. The crux of it is that I've come across some intriguing writings/blogs that a) I want to remember and share, and b) have inspired me to write down some of my own thoughts.</p>
+    <small>27 Jul 2016</small>
+    <p>So it's the middle of the summer -- two-thirds of the way through, actually -- and I have just spent a <em>very productive</em> weekend reading about the pains and perils of graduate study. The crux of it is that I've come across some intriguing writings/blogs that a) I want to remember and share, and b) have inspired me to write down some of my own thoughts. So check out my <a href="https://zhuangjindu.github.io/pages/inspiring-things.html">inspiring things page</a></p>
   </article>
 
 
