--- a/pages/inspiring-things.html
+++ b/pages/inspiring-things.html
@@ -17,7 +17,7 @@
   <p>A reading/viewing list of blogs and other interesting works. Note that I don't necessarily agree with all the opinions expressed, but I definitely enjoyed them!</p>
 <h4>Acacdemia</h4>
 <ul>
-<li><a href="http://www.pgbovine.net/PhD-memoir.htm">Philip Guo</a> and particularly his memoir, <a href="http://www.pgbovine.net/PhD-memoir.htm">Ph.D. Grind</a></li>
+<li><a href="http://www.pgbovine.net">Philip Guo</a> and particularly his memoir, <a href="http://www.pgbovine.net/PhD-memoir.htm">Ph.D. Grind</a></li>
 <li><a href="http://recursed.blogspot.ca">Jeffery Shallit</a></li>
 </ul>
 <h4>Webcomics and Art</h4>
