--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Jane Du</title>
-    <link rel="stylesheet" href="https://zhuangjindu.github.io/style.css">
+    <link rel="stylesheet" href="https://janezdu.github.io/style.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
     <header>
-      <h1><a href="https://zhuangjindu.github.io/index.html">Jane Du</h1></a>
+      <h1><a href="https://janezdu.github.io/index.html">Jane Du</h1></a>
       <small>Coding, artwork, and blogging.</small>
-      <nav><ul><li><a href='https://zhuangjindu.github.io/'>Home</a></li><li><a href='https://zhuangjindu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://zhuangjindu.github.io/pages/inspiring-things.html'>Inspiring things</a></li></ul></nav>
+      <nav><ul><li><a href='https://janezdu.github.io/'>Home</a></li><li><a href='https://janezdu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://janezdu.github.io/pages/inspiring-things.html'>Inspiring things</a></li></ul></nav>
     </header>
     <section>
       <p>Hi there! Welcome to my site. I am also on <a href="https://github.com/zhuangjindu">Github</a>, <a href="https://twitter.com/janezdu">Twitter</a>, <a href="https://keybase.io/cyphra">Keybase</a>, and <a href="https://janezdu.deviantart.com">Deviantart</a>.
@@ -17,7 +20,16 @@
 
 
   <article>
-    <h2><a href="https://zhuangjindu.github.io/posts/quotation-marks.html">Quotation Marks</a></h2>
+    <h2><a href="https://janezdu.github.io/posts/test.html">None</a></h2>
+    <small>7 Aug 2016</small>
+    <p><code>javascript
+var asdf = function () {
+    console.log("hi there");
+}</code></p>
+  </article>
+
+  <article>
+    <h2><a href="https://janezdu.github.io/posts/quotation-marks.html">Quotation Marks</a></h2>
     <small>6 Aug 2016</small>
     <p>So, to state the obvious -- English grammar is particular and difficult. I had the a strict English teacher in grades 11 and 12 who put her all into making sure that we, her students, would never commit horrors like comma splices. </p>
 <p>Actually, she was an amazing teacher, and the more that I look back, the more that I realize it was rather incredible that she was able to push such difficult, <a href="https://en.wikipedia.org/wiki/Grammar_school#Canada">archaic, even</a> grammar-school lessons that most teachers really don't bother with anymore, while still being loved and respected by almost all the student body that she taught. She was one of those "legendary" teachers, so to speak.</p>
@@ -35,14 +47,14 @@
   </article>
 
   <article>
-    <h2><a href="https://zhuangjindu.github.io/posts/summertime.html">Summertime</a></h2>
+    <h2><a href="https://janezdu.github.io/posts/summertime.html">Summertime</a></h2>
     <small>28 Jul 2016</small>
     <p>So it's the middle of the summer -- two-thirds of the way through, actually -- and I have just spent a <em>very productive</em> weekend reading about the pains and perils of graduate study. The crux of it is that I've come across some intriguing writings/blogs that a) I want to remember and share, and b) have inspired me to write down some of my own thoughts. So check out my <a href="https://zhuangjindu.github.io/pages/inspiring-things.html">inspiring things page</a></p>
   </article>
 
 
 <section>
-  <a href="https://zhuangjindu.github.io/archive.html">View older posts.</a>
+  <a href="https://janezdu.github.io/archive.html">View older posts.</a>
 </section>
 
     </section>
