--- a/pages/artwork.html
+++ b/pages/artwork.html
@@ -3,13 +3,16 @@
   <head>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Jane Du - Artwork</title>
-    <link rel="stylesheet" href="https://zhuangjindu.github.io/style.css">
+    <link rel="stylesheet" href="https://janezdu.github.io/style.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
     <header>
-      <h1><a href="https://zhuangjindu.github.io/index.html">Jane Du</h1></a>
+      <h1><a href="https://janezdu.github.io/index.html">Jane Du</h1></a>
       <small>Coding, artwork, and blogging.</small>
-      <nav><ul><li><a href='https://zhuangjindu.github.io/'>Home</a></li><li><a href='https://zhuangjindu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://zhuangjindu.github.io/pages/inspiring-things.html'>Inspiring things</a></li></ul></nav>
+      <nav><ul><li><a href='https://janezdu.github.io/'>Home</a></li><li><a href='https://janezdu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://janezdu.github.io/pages/inspiring-things.html'>Inspiring things</a></li></ul></nav>
     </header>
     <section>
       <article>
@@ -26,7 +29,7 @@
 </article>
 
 <section>
-  <a href="https://zhuangjindu.github.io/index.html">Return to home.</a>
+  <a href="https://janezdu.github.io/index.html">Return to home.</a>
 </section>
 
     </section>
