--- a/pages/inspiring-things.html
+++ b/pages/inspiring-things.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>Jane Du - Inspiring things</title>
+    <title>Jane Du - Reading</title>
     <link rel="stylesheet" href="https://janezdu.github.io/style.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
@@ -12,11 +12,11 @@
     <header>
       <h1><a href="https://janezdu.github.io/index.html">Jane Du</h1></a>
       <small>Coding, artwork, and blogging.</small>
-      <nav><ul><li><a href='https://janezdu.github.io/'>Home</a></li><li><a href='https://janezdu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://janezdu.github.io/pages/inspiring-things.html'>Inspiring things</a></li></ul></nav>
+      <nav><ul><li><a href='https://janezdu.github.io/'>Home</a></li><li><a href='https://janezdu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://janezdu.github.io/pages/inspiring-things.html'>Reading</a></li></ul></nav>
     </header>
     <section>
       <article>
-  <h2>Inspiring things</h2>
+  <h2>Reading</h2>
   <p>A reading/viewing list of blogs and other interesting works. Note that I don't necessarily agree with all the opinions expressed, but I definitely enjoyed them!</p>
 <h4>Acacdemia</h4>
 <ul>
