--- a/archive.html
+++ b/archive.html
@@ -12,16 +12,12 @@
     <header>
       <h1><a href="https://janezdu.github.io/index.html">Jane Du</h1></a>
       <small>Coding, artwork, and blogging.</small>
-      <nav><ul><li><a href='https://janezdu.github.io/'>Home</a></li><li><a href='https://janezdu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://janezdu.github.io/pages/inspiring-things.html'>Inspiring things</a></li></ul></nav>
+      <nav><ul><li><a href='https://janezdu.github.io/'>Home</a></li><li><a href='https://janezdu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://janezdu.github.io/pages/inspiring-things.html'>Reading</a></li></ul></nav>
     </header>
     <section>
       <article>
   <h2>Archive</h2>
   <ul>
-    
-    <li>
-      <a href="https://janezdu.github.io/posts/test.html">None</a> (7 Aug 2016)
-    </li>
     
     <li>
       <a href="https://janezdu.github.io/posts/quotation-marks.html">Quotation Marks</a> (6 Aug 2016)
