--- a/index.html
+++ b/index.html
@@ -12,21 +12,12 @@
     <header>
       <h1><a href="https://janezdu.github.io/index.html">Jane Du</h1></a>
       <small>Coding, artwork, and blogging.</small>
-      <nav><ul><li><a href='https://janezdu.github.io/'>Home</a></li><li><a href='https://janezdu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://janezdu.github.io/pages/inspiring-things.html'>Inspiring things</a></li></ul></nav>
+      <nav><ul><li><a href='https://janezdu.github.io/'>Home</a></li><li><a href='https://janezdu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://janezdu.github.io/pages/inspiring-things.html'>Reading</a></li></ul></nav>
     </header>
     <section>
-      <p>Hi there! Welcome to my site. I am also on <a href="https://github.com/zhuangjindu">Github</a>, <a href="https://twitter.com/janezdu">Twitter</a>, <a href="https://keybase.io/cyphra">Keybase</a>, and <a href="https://janezdu.deviantart.com">Deviantart</a>.
+      <p>Hi there! Welcome to my site. I am also on <a href="https://github.com/janezdu">Github</a>, <a href="https://twitter.com/janezdu">Twitter</a>, <a href="https://keybase.io/cyphra">Keybase</a>, and <a href="https://janezdu.deviantart.com">Deviantart</a>.
 </p>
 
-
-  <article>
-    <h2><a href="https://janezdu.github.io/posts/test.html">None</a></h2>
-    <small>7 Aug 2016</small>
-    <p><code>javascript
-var asdf = function () {
-    console.log("hi there");
-}</code></p>
-  </article>
 
   <article>
     <h2><a href="https://janezdu.github.io/posts/quotation-marks.html">Quotation Marks</a></h2>
