--- a/pages/reading.html
+++ b/pages/reading.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>Jane Du - Artwork</title>
+    <title>Jane Du - Reading</title>
     <link rel="stylesheet" href="https://janezdu.github.io/style.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
@@ -16,16 +16,19 @@
     </header>
     <section>
       <article>
-  <h2>Artwork</h2>
-  <p>Some of my artwork. For digital art, I use a Huion H610 pro with Paint Tool Sai/Krita, and for traditional art, I am most comfortable with pencil crayons, oil pastels, and graphite sketching.</p>
-<p><a href="http://janezdu.deviantart.com/art/Cosette-624207030">Cosette</a>
-<div class="tile"
-     style="background-image: url('http://pre10.deviantart.net/dd0b/th/pre/i/2016/208/5/d/cosette_by_janezdu-dabmx86.jpg');">
-</div></p>
-<p><a href="http://janezdu.deviantart.com/art/Computer-Science-Orgs-624208187">ACSU and WICC</a>
-<div class="tile"
-     style="background-image: url('http://img13.deviantart.net/c17f/i/2016/208/5/b/computer_science_orgs_by_janezdu-dabmy4b.jpg');">
-</div></p>
+  <h2>Reading</h2>
+  <p>A reading/viewing list of blogs and other interesting works. Note that I don't necessarily agree with all the opinions expressed, but I definitely enjoyed them!</p>
+<h4>Acacdemia</h4>
+<ul>
+<li><a href="http://www.pgbovine.net">Philip Guo</a> and particularly his memoir, <a href="http://www.pgbovine.net/PhD-memoir.htm">Ph.D. Grind</a></li>
+<li><a href="http://recursed.blogspot.ca">Jeffery Shallit</a></li>
+</ul>
+<h4>Webcomics and Art</h4>
+<ul>
+<li><a href="http://www.yuumeiart.com/">Yuumei</a></li>
+<li><a href="http://hemlock.smackjeeves.com/">Hemlock</a></li>
+<li><a href="http://gunnerkrigg.com/">Gunnerkrigg Court</a></li>
+</ul>
 </article>
 
 <section>
