--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <h1><a href="https://janezdu.github.io/index.html">Jane Du</h1></a>
       <small>Coding, artwork, and blogging.</small>
-      <nav><ul><li><a href='https://janezdu.github.io/'>Home</a></li><li><a href='https://janezdu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://janezdu.github.io/pages/inspiring-things.html'>Reading</a></li></ul></nav>
+      <nav><ul><li><a href='https://janezdu.github.io/'>Home</a></li><li><a href='https://janezdu.github.io/pages/artwork.html'>Artwork</a></li><li><a href='https://janezdu.github.io/pages/reading.html'>Reading</a></li></ul></nav>
     </header>
     <section>
       <p>Hi there! Welcome to my site. I am also on <a href="https://github.com/janezdu">Github</a>, <a href="https://twitter.com/janezdu">Twitter</a>, <a href="https://keybase.io/cyphra">Keybase</a>, and <a href="https://janezdu.deviantart.com">Deviantart</a>.
